tests/paczka1/fuzzy1/60618749.err
Error in line 4: 62K A769 54,0
Error in line 5: 62K A139 76,4
Error in line 8: A769 A139 24,0
Error in line 14: A769 A769 13,0
Error in line 11: 62K A679 48,4
Error in line 16: A769 A679 85,2
Error in line 1: fkB0YcF4x A769 56,9
Error in line 23: IORXcirBA A679 18,9
Error in line 26: A769 A679 15,3
Error in line 31: A769 A139 46,8
